$size[14]{$u{Update for 16.03.21:}
  * fixed combat damage display not working
 
$size[14]{$u{Update for 11.02.21:}
  * fixed some hitboxes being flipped on Y-axis
 
$size[14]{$u{Update for 08.02.21:}
  * merged loftar's changes
  * hopefully fixed ConcurrentModificationException when updating attribute/skill values in craft window
  * fixed crash when opening Extended Craft window
 
$size[14]{$u{Update for 29.01.21:}
  * merged loftar's changes
 
$size[14]{$u{Update for 11.01.21:}
  * fixed object health percentage not updating properly
  * merged loftar's changes.
 
$size[14]{$u{Update for 11.12.20:}
  * fixed summer and winter season durations.
 
$size[14]{$u{Update for 07.12.20:}
  * merged loftar's changes.
 
$size[14]{$u{Update for 04.12.20:}
  * fixed object info (growth stage/damage etc) showing for objects behind camera under some angles.
  * fixed quest markers showing wrong direction under some camera angles.
 
$size[14]{$u{Update for 02.12.20:}
  * improved translation of craft window
 
$size[14]{$u{Update for 30.11.20:}
  * merged loftar's changes
  * marked cellar door as passable
 
$size[14]{$u{Update for 29.11.20:}
  * added action to drink tea or water in belt, hands or inventory. Default key bind is ALT+D, can be changed in Options.
 
$size[14]{$u{Update for 28.11.20:}
  * added client localization support
 
$size[14]{$u{Update for 25.11.20:}
  * made radar button in Options toggle actual minimap icon settings
  * fixed UI-scaling in Options window
  * added option to set default speed (Options->General->Default speed)
  * changed character name font in character selector to the one that has not just latin characters
 
$size[14]{$u{Update for 24.11.20:}
  * improved hitbox performance
  * added option to show hitboxes on top or below of objects
 
$size[14]{$u{Update for 23.11.20:}
  * fixed being able to enter non-numeric values into stockpile input
  * Minimap Icon Settings: fixed scrollbar not detecting mouse clicks